--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,5 +1,5 @@
 config:
-  info: "master branch,springcloud-config/config-dev.yml version=2 edittttttt"
+  info: "master branch,springcloud-config/config-dev.yml version=2"
   edit: "new edit"
 
  
